<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity$PlaceholderFragment">

    <LinearLayout
        android:layout_height="fill_parent"
        android:layout_width="fill_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/button_gasUse"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:text="@string/gasUse"
            />

        <Button
            android:id="@+id/button_speedLimit"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:text="@string/speedLimit"
            />

        <Button
            android:id="@+id/button_trafficReport"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:text="@string/trafficReport"
            />

        <Button
            android:id="@+id/button_timeWithoutPhone"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:text="@string/driverRanking"
            />

        <Button
            android:id="@+id/button_myRewards"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:text="@string/batteryLevel"
            />

    </LinearLayout>

</RelativeLayout>
